stable version without messages
Co-authored-by: Copilot <copilot@github.com>